# SEM-CL-Studio

./: .gitignore  BLUEPRINT.md  README.md  VS_CODE_USER_GUIDE.md  app.py  pyproject.toml  run_semcl.bat
src/semcl_studio/: __init__.py  __main__.py  app.py
src/semcl_studio/analysis/: __init__.py  mapping.py  spectrum.py
src/semcl_studio/io/: __init__.py  filename_parser.py  hdf5_reader.py
src/semcl_studio/models/: __init__.py  dataset.py
src/semcl_studio/ui/: __init__.py  file_panel.py  main_window.py  theme.py
src/semcl_studio/ui/tabs/: __init__.py  mapping_tab.py  sem_image_tab.py  spectrum_tab.py
src/semcl_studio/ui/widgets/: __init__.py  empty_state.py  image_panel.py  scale_bar_controls.py  wavelength_selector.py
tests/: test_core.py  test_hdf5_reader.py  test_registration.py  test_ui_smoke.py
